fix: better button alignment

--- a/assets/scss/layout/_intro.scss
+++ b/assets/scss/layout/_intro.scss
@@ -212,7 +212,7 @@ $_background-width-beyond-column: 70px;
     justify-content: center;
 
     min-height: 100px;
-    padding-top: my.$gutter * 2;
+    padding-top: my.$gutter;
     padding-right: my.$gutter;
     padding-bottom: my.$gutter * 2;
     padding-left: my.$gutter * 2;
